--- a/.github/workflows/deploy-nuget-packages.yml
+++ b/.github/workflows/deploy-nuget-packages.yml
@@ -47,28 +47,14 @@ jobs:
          echo "No affected projects."
          echo "has_output=false" >> $GITHUB_OUTPUT
         fi
-
-    - name: Restore dependencies
-      if: steps.dotnet_affected.outputs.has_output == 'true'
-      run: |
-        for proj in $(cat affected.proj); do
-          dotnet restore $proj
-        done
-
-    - name: Build affected projects
-      if: steps.dotnet_affected.outputs.has_output == 'true'
-      run: |
-        for proj in $(cat affected.proj); do
-          dotnet build $proj --configuration Release
-        done
   
     - name: Test affected projects
       if: steps.dotnet_affected.outputs.has_output == 'true'
-      run: dotnet test affected.proj --no-build
+      run: dotnet test affected.proj
       
     - name: Pack affected projects
       if: steps.dotnet_affected.outputs.has_output == 'true'
-      run: dotnet pack affected.proj --no-build --configuration Release
+      run: dotnet pack affected.proj
     
     - name: Push NuGet packages
       if: steps.dotnet_affected.outputs.has_output == 'true'
