--- a/.github/workflows/build-and-push-nuget-packages.yml
+++ b/.github/workflows/build-and-push-nuget-packages.yml
@@ -53,13 +53,11 @@ jobs:
     - name: Pack affected projects
       if: steps.dotnet_affected.outputs.has_output == 'true'
       run: |
-        for proj in $(cat affected.proj); do
-          if [ "${{ github.ref_name }}" == "main" ]; then
-            dotnet pack $proj --no-build --configuration Release
-          else
-            dotnet pack $proj --no-build --configuration Release -p:PackageVersionSuffix=dev
-          fi
-        done
+        if [ "${{ github.ref_name }}" == "main" ]; then
+          dotnet pack affected.proj
+        else
+          dotnet pack affected.proj -p:PackageVersionSuffix=dev
+        fi
     
     - name: Push NuGet packages
       if: steps.dotnet_affected.outputs.has_output == 'true'
