--- a/Tests/BuildingBlock.Test.UnitTest/BuildingBlock.Test.UnitTest.csproj
+++ b/Tests/BuildingBlock.Test.UnitTest/BuildingBlock.Test.UnitTest.csproj
@@ -7,13 +7,14 @@
 
         <IsPackable>false</IsPackable>
         <IsTestProject>true</IsTestProject>
+        <RootNamespace>Tests</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="coverlet.collector" Version="6.0.0"/>
-        <PackageReference Include="FluentAssertions" Version="6.12.0" />
+        <PackageReference Include="FluentAssertions" Version="6.12.0"/>
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0"/>
-        <PackageReference Include="Moq" Version="4.20.70" />
+        <PackageReference Include="Moq" Version="4.20.70"/>
         <PackageReference Include="xunit" Version="2.5.3"/>
         <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3"/>
     </ItemGroup>
@@ -23,11 +24,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Presentation\" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <ProjectReference Include="..\Presentation\BuildingBlock.Presentation.API\BuildingBlock.Presentation.API.csproj" />
+        <ProjectReference Include="..\..\Presentations\BuildingBlock.Presentation.API\BuildingBlock.Presentation.API.csproj"/>
     </ItemGroup>
 
 </Project>
